package modelos;

public class Insumo {

}
